# rpi-thermometer

./: .editorconfig  .gitignore  LICENSE  README.md  ansible.cfg  env_install.yaml  generate_ui.sh  hosts.yaml  hosts.yml  install.yaml  new-venv  playbook.yaml  pyproject.toml  python-service  requirements.in  requirements.txt  tox.ini  uninstall.yaml  update-venv
Qt/UI_Temp_Logger/: .gitignore  test_ui.py  ui_mainwindow.py
Temperature Logger Hat/: Temperature Logger Hat.kicad_prl  Temperature Logger Hat.kicad_pro  Temperature Logger Hat.kicad_sch
ansible/: hosts.yml  playbook.yaml
ansible/roles/configure_rpi/defaults/: main.yaml
ansible/templates/: rpi_monitor.service.j2  rpi_service_wrapper.sh
ansible/vars/: config_common.yml
app/: appconfig.py  baseui.py  example.py  graphicalui.py  main.py  mainapplication.py  mainwindow.py  monitorip.py  resources_rc.py  savedataagent.py  savedataworker.py  saveprogressdialog.py  settingsdialog.py
app/sensors/: basesensor.py  mocksensor.py  spitempsensor.py
app/ui/: form.ui  mainwindow.ui  pyproject.toml  resources.qrc  resources_rc.py  saveprogressdialog.ui  settings_dialog.ui  ui_mainwindow.py  ui_saveprogressdialog.py  ui_settingsdialog.py  ui_settingsdialog_1.py
files/: chardisplay.py
hw_services/: blinka_test.py  chardisplay.py  monitorshutdown.py  rgbled.py  templogger.py  utils.py
roles/python_venv/files/: create_venv.sh  requirements.in
roles/python_venv/tasks/: main.yaml
templates/: python_env_wrapper.sh  rpi_desktop.j2  rpi_monitor.service.j2
ui/: form.ui
vars/: config_common.yml
(+3 files in other folders)
