[project]
name = "app"
version = "0.1.0"
description = "Collection of services to run on Raspberry Pi"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = "(venv|raspi-blinka.py)"

[tool.black]
line-length = 99
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 99
force_sort_within_sections = true
skip_gitignore = true
